--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>HandlebarsJs Demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The J Duo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Future home of the JDUO!</h1>
+    <header>
+        <h1>The J Duo</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#music">Music</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are The J Duo, a rock band from [your location].</p>
+    </section>
+    <section id="music">
+        <h2>Our Music</h2>
+        <!-- You can add links to your music or embed videos here -->
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Email us at: <a href="mailto:info@thejduo.com">info@thejduo.com</a></p>
+    </section>
+    <footer>
+        <p>&copy; 2023 The J Duo</p>
+    </footer>
 </body>
 </html>
