--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+    <section id="image-section">
+      <img src="home-main-img.jpg" alt="The J Duo" id="home-main-img">
+  </section>
     <section id="about">
         <h2>About Us</h2>
         <p>We are The J Duo, a rock band from [your location].</p>
