--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <section id="image-section">
-      <img src="home-main-img.jpg" alt="The J Duo" id="home-main-img">
+      <img src="assets/home-main-img.jpg" alt="The J Duo" id="home-main-img">
   </section>
     <section id="about">
         <h2>About Us</h2>
