--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <h1>The J Duo</h1>
         <nav>
-            <a href="#about">About</a>
-            <a href="#music">Music</a>
-            <a href="#contact">Contact</a>
-        </nav>
+          <a href="about.html">About</a>
+          <a href="music.html">Music</a>
+          <a href="contact.html">Contact</a>
+      </nav>
     </header>
     <section id="image-section">
       <img src="assets/home-main-img.jpg" alt="The J Duo" id="home-main-img">
