--- a/about.html
+++ b/about.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <header>
-        <!-- ... same as index.html ... -->
+        <h1>The J Duo</h1>
+        <nav>
+            <a href="about.html">About</a>
+            <a href="music.html">Music</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
     <section id="about">
         <h2>About Us</h2>
-        <p>We are The J Duo, a rock band from [your location].</p>
-        <!-- Add more content about the band here -->
+        <p>We are The J Duo, a band from Bucks County Pennsylvania.</p>
     </section>
     <footer>
-        <!-- ... same as index.html ... -->
     </footer>
 </body>
 </html>
