--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,18 @@
         <link rel="stylesheet" href="styles/style.css">
         <title>About - The J Duo</title>
     </head>
+    <body>
+        <header>
+            <h1>The J Duo</h1>
+            <nav>
+                <a href="about.html">About</a>
+                <a href="music.html">Music</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Email us at: <a href="mailto:info@thejduo.com">info@thejduo.com</a></p>
     </section>
+    </body>
 </html>
