--- a/music.html
+++ b/music.html
@@ -6,9 +6,18 @@
         <link rel="stylesheet" href="styles/style.css">
         <title>About - The J Duo</title>
     </head>
-    <section id="music">
-        <h2>Our Music</h2>
-        <!-- You can add links to your music or embed videos here -->
-    </section>
-<!-- ... -->
+    <body>
+        <header>
+            <h1>The J Duo</h1>
+            <nav>
+                <a href="about.html">About</a>
+                <a href="music.html">Music</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <section id="music">
+            <h2>Our Music</h2>
+            <!-- You can add links to your music or embed videos here -->
+        </section>
+    </body>
 </html>
