--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
         <p>We are The J Duo, a band from Bucks County Pennsylvania.</p>
     </section>
     <footer>
+        <p>&copy; 2023 The J Duo</p>
     </footer>
 </body>
 </html>
