--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,8 @@
         <h2>Contact Us</h2>
         <p>Email us at: <a href="mailto:info@thejduo.com">info@thejduo.com</a></p>
     </section>
+    <footer>
+        <p>&copy; 2023 The J Duo</p>
+    </footer>
     </body>
 </html>
