--- a/music.html
+++ b/music.html
@@ -17,7 +17,10 @@
         </header>
         <section id="music">
             <h2>Our Music</h2>
-            <!-- You can add links to your music or embed videos here -->
+           
         </section>
+        <footer>
+            <p>&copy; 2023 The J Duo</p>
+        </footer>
     </body>
 </html>
