--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <h1>The J Duo</h1>
+        <a href="index.html" id="home-link">
+            <h1>The J Duo</h1>
+        </a>
         <nav>
             <a href="about.html">About</a>
             <a href="music.html">Music</a>
