--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
   </section>
   <footer>
     <p>&copy; 2023 The J Duo</p>
-  </footer>
+    <p>
+        Follow us on:
+        <a href="https://www.facebook.com/thejduo" target="_blank" rel="noopener noreferrer">Facebook</a> |
+        <a href="https://www.instagram.com/thejduo" target="_blank" rel="noopener noreferrer">Instagram</a>
+    </p>
+</footer>
+
 </body>
 
 </html>
