--- a/music.html
+++ b/music.html
@@ -25,7 +25,13 @@
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
+        <p>
+            Follow us on:
+            <a href="https://www.facebook.com/thejduo" target="_blank" rel="noopener noreferrer">Facebook</a> |
+            <a href="https://www.instagram.com/thejduo" target="_blank" rel="noopener noreferrer">Instagram</a>
+        </p>
     </footer>
+    
 </body>
 
 </html>
