--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
         <p>&copy; 2023 The J Duo</p>
         <p>
             Follow us on:
-            <a href="https://www.facebook.com/thejduo" target="_blank" rel="noopener noreferrer">Facebook</a> |
-            <a href="https://www.instagram.com/thejduo" target="_blank" rel="noopener noreferrer">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=100077331999051" target="_blank" rel="noopener noreferrer">Facebook</a> |
+            <a href="https://www.instagram.com/thejduomusic" target="_blank" rel="noopener noreferrer">Instagram</a>
         </p>
     </footer>
     
