--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </header>
     <section id="about">
         <h2>About Us</h2>
-        <p>We are The J Duo, a band from Bucks County Pennsylvania.</p>
+        <p>We are The J Duo, a Local Duo in Bucks/Montco, PA 🎸Lead Guitar @jtroth17 🎤Vox/Keys/Guitar @jakedillon_music.</p>
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
