--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="assets/favicon-32x32.png" type="image/x-icon">
     <title>About - The J Duo</title>
 </head>
 
@@ -21,7 +22,7 @@
     </header>
     <section id="about">
         <h2>About Us</h2>
-        <p>We are The J Duo, a Local Duo in Bucks/Montco, PA 🎸Lead Guitar @jtroth17 🎤Vox/Keys/Guitar @jakedillon_music.</p>
+        <p>We are The J Duo, a Local Duo in Bucks/Montco, PA 🎸Lead Guitar <a href="https://www.instagram.com/jtroth17" target="_blank" rel="noopener noreferrer">@jtroth17</a> 🎤Vox/Keys/Guitar <a href="https://www.instagram.com/jakedillon_music" target="_blank" rel="noopener noreferrer">@jakedillon_music</a>.</p>
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
