--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The J Duo</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="assets/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
