--- a/music.html
+++ b/music.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="assets/favicon-32x32.png" type="image/x-icon">
     <title>About - The J Duo</title>
 </head>
 
