--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
     <section id="about">
         <h2>About Us</h2>
-        <p>We are The J Duo, a Local Duo in Bucks/Montco, PA 🎸Lead Guitar <a href="https://www.instagram.com/jtroth17" target="_blank" rel="noopener noreferrer">@jtroth17</a> 🎤Vox/Keys/Guitar <a href="https://www.instagram.com/jakedillon_music" target="_blank" rel="noopener noreferrer">@jakedillon_music</a>.</p>
+        <p>We are The J Duo, a Local Duo in Bucks/Montco, PA <br>🎸Lead Guitar <a href="https://www.instagram.com/jtroth17" target="_blank" rel="noopener noreferrer">@jtroth17</a><br> 🎤Vox/Keys/Guitar <a href="https://www.instagram.com/jakedillon_music" target="_blank" rel="noopener noreferrer">@jakedillon_music</a>.</p>
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
