--- a/music.html
+++ b/music.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="assets/favicon-32x32.png" type="image/x-icon">
     <title>About - The J Duo</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
