--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>The J Duo</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" href="assets/favicon-32x32.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/5paNdF+Tm2JsNR4j4ufj4A2XhOPeJ+"
+ crossorigin="anonymous">
 </head>
 
 <body>
@@ -27,8 +31,12 @@
     <p>&copy; 2023 The J Duo</p>
     <p>
         Follow us on:
-        <a href="https://www.facebook.com/profile.php?id=100077331999051" target="_blank" rel="noopener noreferrer">Facebook</a> |
-        <a href="https://www.instagram.com/thejduomusic" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=100077331999051" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-facebook"></i>
+        </a> |
+        <a href="https://www.instagram.com/thejduomusic" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-instagram"></i>
+        </a>
     </p>
 </footer>
 
