--- a/about.html
+++ b/about.html
@@ -30,7 +30,9 @@
             <!-- Jake Dillon's section -->
             <div style="width: 45%;">
                 <img src="assets/jake-dillon-image.jpg" alt="Jake Dillon" style="width: 100%; border-radius: 10px;">
-                <h2>Jake Dillon</h2>
+                <h2>🎤Vox/Keys/Guitar Jake Dillon <a href="https://www.instagram.com/jakedillon_music" target="_blank"
+                        rel="noopener noreferrer">@jakedillon_music</a>
+                </h2>
                 <p>Jake Dillon is a talented musician and one half of JDuoMusic. He plays various instruments and adds
                     his unique voice to the duo's incredible harmonies. Jake's passion for music shines through in every
                     performance.</p>
@@ -39,18 +41,15 @@
             <!-- Jordan Roth's section -->
             <div style="width: 45%;">
                 <img src="assets/jordan-roth-image.jpg" alt="Jordan Roth" style="width: 100%; border-radius: 10px;">
-                <h2>Jordan Roth</h2>
+                <h2>🎸Lead Guitar - Jordan Roth <a href="https://www.instagram.com/jtroth17" target="_blank"
+                        rel="noopener noreferrer">@jtroth17</a>
+                </h2>
                 <p>Jordan Roth is the other half of JDuoMusic. With his extraordinary musical skills and creative
                     energy, he brings the duo's music to life. Jordan is known for his engaging performances and his
                     dedication to creating meaningful music.</p>
             </div>
         </div>
 
-
-        <p>🎸Lead Guitar <a href="https://www.instagram.com/jtroth17" target="_blank"
-                rel="noopener noreferrer">@jtroth17</a></p>
-        <p>🎤Vox/Keys/Guitar <a href="https://www.instagram.com/jakedillon_music" target="_blank"
-                rel="noopener noreferrer">@jakedillon_music</a></p>
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
