--- a/about.html
+++ b/about.html
@@ -10,6 +10,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .band-members {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .member {
+            width: 45%;
+            margin-bottom: 20px;
+        }
+
+        .member img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        /* Mobile view */
+        @media screen and (max-width: 768px) {
+            .member {
+                width: 100%;
+            }
+        }
+    </style>
+
 </head>
 
 <body>
@@ -26,12 +53,12 @@
     <section id="about">
         <h1>About Us</h1>
         <h2>We are The J Duo, a Local Duo in Bucks/Montco, PA </h2>
-        <div style="display: flex; justify-content: space-between; align-items: center;">
+        <div class="band-members">
             <!-- Jake Dillon's section -->
-            <div style="width: 45%;">
+            <div class="member">
                 <img src="assets/jake-dillon-image.jpg" alt="Jake Dillon" style="width: 100%; border-radius: 10px;">
-                <h2>🎤Vox/Keys/Guitar Jake Dillon <a href="https://www.instagram.com/jakedillon_music" target="_blank"
-                        rel="noopener noreferrer">@jakedillon_music</a>
+                <h2>🎤Vox/Keys/Guitar - Jake Dillon - <a href="https://www.instagram.com/jakedillon_music"
+                        target="_blank" rel="noopener noreferrer">@jakedillon_music</a>
                 </h2>
                 <p>Jake Dillon is a talented musician and one half of JDuoMusic. He plays various instruments and adds
                     his unique voice to the duo's incredible harmonies. Jake's passion for music shines through in every
@@ -39,9 +66,9 @@
             </div>
 
             <!-- Jordan Roth's section -->
-            <div style="width: 45%;">
+            <div class="member">
                 <img src="assets/jordan-roth-image.jpg" alt="Jordan Roth" style="width: 100%; border-radius: 10px;">
-                <h2>🎸Lead Guitar - Jordan Roth <a href="https://www.instagram.com/jtroth17" target="_blank"
+                <h2>🎸Lead Guitar - Jordan Roth - <a href="https://www.instagram.com/jtroth17" target="_blank"
                         rel="noopener noreferrer">@jtroth17</a>
                 </h2>
                 <p>Jordan Roth is the other half of JDuoMusic. With his extraordinary musical skills and creative
