--- a/about.html
+++ b/about.html
@@ -26,6 +26,10 @@
 
         .member img {
             width: 100%;
+            height: 300px;
+            /* Adjust this value to set the desired height */
+            object-fit: cover;
+            /* This will keep the aspect ratio while covering the entire container */
             border-radius: 10px;
         }
 
@@ -36,6 +40,7 @@
             }
         }
     </style>
+
 
 </head>
 
