--- a/index.html
+++ b/index.html
@@ -10,17 +10,33 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/css/bootstrap.min.css"
+    crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
     <a href="index.html" id="home-link">
       <h1>The J Duo</h1>
-  </a>
-    <nav>
-      <a href="about.html">About</a>
-      <a href="music.html">Music</a>
-      <a href="contact.html">Contact</a>
+    </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Brand</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+        </ul>
+      </div>
     </nav>
   </header>
   <section id="image-section">
@@ -29,15 +45,15 @@
   <footer>
     <p>&copy; 2023 The J Duo</p>
     <p>
-        Follow us on:
-        <a href="https://www.facebook.com/profile.php?id=100077331999051" target="_blank" rel="noopener noreferrer">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/thejduomusic" target="_blank" rel="noopener noreferrer">
-          <i class="fab fa-instagram"></i>
-        </a>
+      Follow us on:
+      <a href="https://www.facebook.com/profile.php?id=100077331999051" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/thejduomusic" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i>
+      </a>
     </p>
-</footer>
+  </footer>
 
 </body>
 
