--- a/index.html
+++ b/index.html
@@ -25,22 +25,7 @@
     <a href="index.html" id="home-link">
       <h1>The J Duo</h1>
     </a>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    {% include navbar.html %}
   </header>
   <section id="image-section">
     <img src="assets/home-main-img.jpg" alt="The J Duo" id="home-main-img">
