--- a/about.html
+++ b/about.html
@@ -47,31 +47,53 @@
     </header>
     <section id="about">
         <h1>About Us</h1>
-        <h3>We are The J Duo, a Local Duo in Bucks/Montco, PA </h3>
-        <div class="band-members">
+        <h3>We are The J Duo, a Local Duo in Bucks/Montco, PA</h3>
+        <div class="container">
             <!-- Jake Dillon's section -->
-            <div class="member">
-                <img src="assets/jake-dillon-image.jpg" alt="Jake Dillon" style="width: 100%; border-radius: 10px;">
-                <h2>🎤Vox/Keys/Guitar - Jake Dillon - <a href="https://www.instagram.com/jakedillon_music"
-                        target="_blank" rel="noopener noreferrer">@jakedillon_music</a>
-                </h2>
-                <p>Jake Dillon is a talented musician and one half of JDuoMusic. He plays various instruments and adds
-                    his unique voice to the duo's incredible harmonies. Jake's passion for music shines through in every
-                    performance.</p>
+            <div class="row">
+                <div class="col-lg-6"><img src="assets/jake-dillon-image.jpg" alt="Jake Dillon"
+                        class="img-fluid band-member-image"></div>
+                <div class="col-lg-6">
+                    <h2>🎤 Vox/Keys/Guitar - Jake Dillon</h2>
+                    <p>Jake Dillon is a singer/songwriter from Philly who started writing music back in 2019. He taught
+                        himself drums, piano and guitar at Bryn Athyn College, where he and Jordan met. He has since
+                        released over 30 songs, played hundreds of gigs around the Philly area and gained 3000 monthly
+                        Spotify listeners. His new song “Just Like the Sea” comes out August 25th.</p>
+                </div>
             </div>
 
             <!-- Jordan Roth's section -->
-            <div class="member">
-                <img src="assets/jordan-roth-image.jpg" alt="Jordan Roth" style="width: 100%; border-radius: 10px;">
-                <h2>🎸Lead Guitar - Jordan Roth - <a href="https://www.instagram.com/jtroth17" target="_blank"
-                        rel="noopener noreferrer">@jtroth17</a>
-                </h2>
-                <p>Jordan Roth is the other half of JDuoMusic. With his extraordinary musical skills and creative
-                    energy, he brings the duo's music to life. Jordan is known for his engaging performances and his
-                    dedication to creating meaningful music.</p>
+            <div class="row flex-lg-row-reverse">
+                <div class="col-lg-6"><img src="assets/jordan-roth-image.jpg" alt="Jordan Roth"
+                        class="img-fluid band-member-image"></div>
+                <div class="col-lg-6">
+                    <h2>🎸 Lead Guitar - Jordan Roth</h2>
+                    <p>Jordan Roth is a guitar player from Northeast Philadelphia who fell in love with guitar when he
+                        was gifted his first Fender Strat at age six. Shortly after, he received guitar lessons at
+                        Jerry’s music on Castor Avenue and years later was a part of the Bucks County School of Rock.
+                        Jordan aspires to play like John Mayer, Jimi Hendrix, and Eric Clapton, but incorporates his own
+                        creativity to multiple genres. Jake and Jordan met at Bryn Athyn College where music speak their
+                        language. Jordan loves to share his passion for music with friends, family, and young, aspired
+                        musicians.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Brianna's section -->
+            <div class="row">
+                <div class="col-lg-6"><img src="assets/brianna.jpg" alt="Brianna" class="img-fluid band-member-image">
+                </div>
+                <div class="col-lg-6">
+                    <h2>👩‍💼 Manager - Brianna Roth</h2>
+                    <p>Brianna “MOMAGER” Roth has been a part of the jduo journey the past two years. Brianna designs
+                        the
+                        marketing for all of their gigs. She knows all of the songs and will sometimes come up and sing!
+                        Recently, she learned how to play the bass and will occasionally play a few songs to compliment
+                        the band.
+                    </p>
+                </div>
             </div>
         </div>
-
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
