--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
   </header>
   <section id="image-section">
-    <img src="assets/home-main-img.jpg" alt="The J Duo" id="home-main-img">
+    <img src="assets/home01.jpg" alt="The J Duo" id="home-main-img">
   </section>
   <footer>
     <p>&copy; 2023 The J Duo</p>
