--- a/about.html
+++ b/about.html
@@ -55,6 +55,8 @@
                         class="img-fluid band-member-image"></div>
                 <div class="col-lg-6">
                     <h2>🎤 Vox/Keys/Guitar - Jake Dillon</h2>
+                    <a class="instagram-link" href="https://www.instagram.com/jakedillon_music" target="_blank"
+                        rel="noopener noreferrer">@jakedillon_music</a>
                     <p>Jake Dillon is a singer/songwriter from Philly who started writing music back in 2019. He taught
                         himself drums, piano and guitar at Bryn Athyn College, where he and Jordan met. He has since
                         released over 30 songs, played hundreds of gigs around the Philly area and gained 3000 monthly
@@ -68,6 +70,8 @@
                         class="img-fluid band-member-image"></div>
                 <div class="col-lg-6">
                     <h2>🎸 Lead Guitar - Jordan Roth</h2>
+                    <a class="instagram-link" href="https://www.instagram.com/jtroth17" target="_blank"
+                        rel="noopener noreferrer">@jtroth17</a>
                     <p>Jordan Roth is a guitar player from Northeast Philadelphia who fell in love with guitar when he
                         was gifted his first Fender Strat at age six. Shortly after, he received guitar lessons at
                         Jerry’s music on Castor Avenue and years later was a part of the Bucks County School of Rock.
@@ -85,6 +89,8 @@
                 </div>
                 <div class="col-lg-6">
                     <h2>👩‍💼 Manager - Brianna Roth</h2>
+                    <a class="instagram-link" href="https://www.instagram.com/briannafayeroth/" target="_blank"
+                        rel="noopener noreferrer">@briannafayeroth</a>
                     <p>Brianna “MOMAGER” Roth has been a part of the jduo journey the past two years. Brianna designs
                         the
                         marketing for all of their gigs. She knows all of the songs and will sometimes come up and sing!
