--- a/about.html
+++ b/about.html
@@ -72,13 +72,32 @@
                     <h2>🎸 Lead Guitar - Jordan Roth</h2>
                     <a class="instagram-link" href="https://www.instagram.com/jtroth17" target="_blank"
                         rel="noopener noreferrer">@jtroth17</a>
-                    <p>Jordan Roth is a guitar player from Northeast Philadelphia who fell in love with guitar when he
-                        was gifted his first Fender Strat at age six. Shortly after, he received guitar lessons at
-                        Jerry’s music on Castor Avenue and years later was a part of the Bucks County School of Rock.
-                        Jordan aspires to play like John Mayer, Jimi Hendrix, and Eric Clapton, but incorporates his own
-                        creativity to multiple genres. Jake and Jordan met at Bryn Athyn College where music speak their
-                        language. Jordan loves to share his passion for music with friends, family, and young, aspired
-                        musicians.
+                    <p>Hailing from the vibrant streets of Northeast Philadelphia, Jordan Roth discovered the siren call
+                        of the guitar at the tender age of six. The moment he strummed his first Fender Strat, gifted
+                        with love, a spark was ignited, a passion was born, and a future rock star was in the making.
+                    </p>
+
+                    <p>Jordan's journey with the guitar began with the melodic guidance at Jerry's Music on Castor
+                        Avenue, where his fingers first danced on the fretboard. But his musical soul was destined for
+                        more. Enrolling at the prestigious Bucks County School of Rock, Jordan refined his skills,
+                        infusing his performances with a raw energy that would make his heroes - John Mayer, Jimi
+                        Hendrix, and Eric Clapton - proud.</p>
+
+                    <p>But Jordan's not one to be boxed in. His style is uniquely his own, a fusion of classic rock and
+                        roll with a twist of modern creativity that spans across genres. He plays with a fire in his
+                        heart and a coolness in his demeanor, connecting with audiences in a way that only he can.</p>
+
+                    <p>It was at Bryn Athyn College where Jordan met Jake, a musical partner-in-crime. Bonded by
+                        melodies and the universal language of music, they formed a connection deeper than words.
+                        Together, they speak a language all their own, resonating with fans, friends, and aspiring young
+                        musicians alike.</p>
+
+                    <p>Jordan's love for music isn't just a passion; it's a calling. He lives to share the joy of
+                        guitar with those around him, whether serenading family gatherings or inspiring the next
+                        generation of rockers. His creativity knows no bounds, his enthusiasm no limits. Jordan Roth
+                        isn't just a guitar player; he's a musical force, a creator, a mentor, and a friend.</p>
+
+                    <p>Come experience the rhythm, the energy, and the passion. Come experience Jordan Roth.</p>
                     </p>
                 </div>
             </div>
