--- a/about.html
+++ b/about.html
@@ -57,10 +57,36 @@
                     <h2>🎤 Vox/Keys/Guitar - Jake Dillon</h2>
                     <a class="instagram-link" href="https://www.instagram.com/jakedillon_music" target="_blank"
                         rel="noopener noreferrer">@jakedillon_music</a>
-                    <p>Jake Dillon is a singer/songwriter from Philly who started writing music back in 2019. He taught
-                        himself drums, piano and guitar at Bryn Athyn College, where he and Jordan met. He has since
-                        released over 30 songs, played hundreds of gigs around the Philly area and gained 3000 monthly
-                        Spotify listeners. His new song “Just Like the Sea” comes out August 25th.</p>
+                    <p>Jake Dillon: Philly's Melodic Maestro Making Waves
+
+                    <p>Born in the heart of Philadelphia's bustling music scene, Jake Dillon is more than just a
+                        singer/songwriter; he's a one-man orchestra, a relentless creator, a force to be reckoned with.
+                        Since embarking on his musical journey in 2019, Jake's world has been a whirlwind of innovation,
+                        passion, and rock 'n' roll.</p>
+
+                    <p>A self-taught genius, Jake mastered drums, piano, and guitar during his time at Bryn Athyn
+                        College. There, he met his musical compatriot Jordan, forming a duo that transcends conventional
+                        boundaries. With three instruments under his belt, Jake's versatility and creative prowess know
+                        no bounds.</p>
+
+                    <p> And the world has taken notice. With over 30 original songs, hundreds of electrifying gigs
+                        around the Philly area, and a rapidly growing fanbase of 3000 monthly Spotify listeners, Jake is
+                        not just chasing dreams; he's living them. His music resonates, speaks to the heart, and carries
+                        the distinct flavor of a true Philly artist.</p>
+
+                    <p>His new song, "Just Like the Sea," set to release on August 25th, promises to be another
+                        rhythmic masterpiece. Infused with Jake's signature blend of soulful lyrics and captivating
+                        melodies, it's poised to make waves in the music scene.</p>
+
+                    <p>But beyond the numbers and accolades, what makes Jake Dillon stand out is his unwavering passion
+                        for music. Every chord he strums, every lyric he pens, every stage he graces, is imbued with the
+                        essence of who he is. He plays not just for the applause but for the love of the craft.</p>
+
+                    <p>Jake's journey has just begun, but his impact is undeniable. Whether rocking out at local venues
+                        or serenading listeners online, he's a true testament to what raw talent, endless drive, and a
+                        bit of Philly grit can achieve.</p>
+
+                    <p>Join the melody, feel the rhythm, embrace the passion. Experience Jake Dillon.</p>
                 </div>
             </div>
 
@@ -110,12 +136,38 @@
                     <h2>👩‍💼 Manager - Brianna Roth</h2>
                     <a class="instagram-link" href="https://www.instagram.com/briannafayeroth/" target="_blank"
                         rel="noopener noreferrer">@briannafayeroth</a>
-                    <p>Brianna “MOMAGER” Roth has been a part of the jduo journey the past two years. Brianna designs
-                        the
-                        marketing for all of their gigs. She knows all of the songs and will sometimes come up and sing!
-                        Recently, she learned how to play the bass and will occasionally play a few songs to compliment
-                        the band.
-                    </p>
+                    <p>Brianna "MOMAGER" Roth: The Creative Catalyst Behind the jduo Sensation</p>
+
+                    <p> If jduo is a meteoric comet in the musical galaxy, then Brianna Roth is the guiding star. Known
+                        affectionately as "MOMAGER," Brianna is more than just a behind-the-scenes powerhouse; she's the
+                        heart, the pulse, the creative spark that ignites the jduo phenomenon.</p>
+
+                    <p> Embarking on this musical journey two years ago, Brianna has been instrumental in designing the
+                        irresistible allure that surrounds jduo. Crafting the marketing for all their gigs, her
+                        visionary approach has been pivotal in shaping their unique identity. But her influence isn't
+                        confined to pixels and posters; it's woven into the very fabric of their sound.</p>
+
+                    <p> Knowing every lyric, every beat, every crescendo, Brianna isn't just a part of the jduo team;
+                        she's part of the music. Occasionally, she'll take to the stage, her voice blending seamlessly
+                        with the band, offering a delightful surprise to audiences. Her singing is not just a
+                        performance; it's a declaration of her unbreakable connection with the musical soul of jduo.</p>
+
+                    <p> And the surprises don't end there! Recently, Brianna discovered the rhythmic allure of the bass,
+                        adding yet another layer to her artistic repertoire. Occasionally stepping in to play a few
+                        songs, she compliments the band with her fresh and dynamic approach, embodying the very essence
+                        of jduo's eclectic style.</p>
+
+                    <p> Brianna "MOMAGER" Roth is more than a manager, a marketer, or a musician. She's a symbol of
+                        innovation, a beacon of creativity, and the nurturing force that continues to propel jduo to new
+                        heights. Her presence is not just felt; it's experienced, it's celebrated, and it's integral to
+                        the magic that is jduo.</p>
+
+                    <p> Join the jduo adventure, and you'll find Brianna there, smiling, singing, and shaping a musical
+                        experience that transcends the ordinary. Her touch is everywhere, her passion is palpable, and
+                        her influence is inescapable.</p>
+
+                    <p> Brianna "MOMAGER" Roth is not just a part of the jduo story; she IS the jduo story.</p>
+
                 </div>
             </div>
         </div>
