--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
                         <a class="nav-link text-white" href="music.html">Music</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-white" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
                 </ul>
