--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,20 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
-        <a href="index.html" id="home-link">
-            <h1>The J Duo</h1>
-        </a>
+        <div class="logo-container">
+            <img src="assets/main_logo.png" alt="The J Duo Logo" class="logo">
+            <h1>J DUO MUSIC</h1>
+        </div>
+        <div class="mobile-logo-container">
+            <img src="assets/main_logo.png" alt="The J Duo Logo" class="logo">
+            <h1>J DUO MUSIC</h1>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
