--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     </header>
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Email us at: <a href="mailto:info@thejduo.com">info@thejduo.com</a></p>
+        <p>Email us at: <a href="mailto:jtroth17@comcast.net">info@thejduo.com</a></p>
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
