--- a/music.html
+++ b/music.html
@@ -22,12 +22,16 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="assets/main_logo.png" alt="The J Duo Logo" class="logo">
-            <h1>J DUO MUSIC</h1>
+            <a href="index.html" id="home-link">
+                <img src="assets/main_logo.png" alt="The J Duo Logo" class="logo">
+                <h1>J DUO MUSIC</h1>
+            </a>
         </div>
         <div class="mobile-logo-container">
-            <img src="assets/main_logo.png" alt="The J Duo Logo" class="logo">
-            <h1>J DUO MUSIC</h1>
+            <a href="index.html" id="home-link">
+                <img src="assets/main_logo.png" alt="The J Duo Logo" class="logo">
+                <h1>J DUO MUSIC</h1>
+            </a>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
