--- a/music.html
+++ b/music.html
@@ -53,6 +53,9 @@
                         <a class="nav-link text-white" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-white" href="testimonials.html">Testimonials</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
                 </ul>
